--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,11 @@
     "module": "commonjs"
   },
   "filesGlob": [
+    "typings/main.d.ts",
     "./*.d.ts"
   ],
   "files": [
+    "typings/main.d.ts",
     "./callback_api.d.ts",
     "./index.d.ts",
     "./properties.d.ts"
