--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ language: node_js
 script:
   - npm i -g typescript typings
   - typings install
-  - typings bundle --out test
+  - typings bundle --out test/main.d.ts
   - tsc -p test
