--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "typings": "^1.3.2"
   },
   "scripts": {
-    "postinstall": "typings install && typings prune"
+    "postinstall": "typings install && typings prune",
+    "build": "typings bundle --out test/main.d.ts",
+    "test": "tsc -p test"
   },
   "repository": {
     "type": "git",
